// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationLauncher is working properly 1`] = `
<li
  class="applauncher-pf dropdown"
>
  <button
    aria-expanded="false"
    class="nav-item-iconic dropdown-toggle btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-th applauncher-pf-icon"
    />
    <span
      class="dropdown-title"
    >
      <span
        class="applauncher-pf-title"
      >
        Application Launcher
        <span
          aria-hidden="true"
          class="caret"
        />
      </span>
    </span>
  </button>
  <ul
    class="dropdown-menu-right dropdown-menu"
    role="menu"
  >
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-storage-domain applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Recteque
        </span>
      </a>
    </li>
  </ul>
</li>
`;

exports[`ApplicationLauncherItem with tooltip is working properly 1`] = `
<li
  class="applauncher-pf-item"
  role="presentation"
>
  <a
    class="applauncher-pf-link"
    href="#"
    role="menuitem"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-pficon pficon-storage-domain applauncher-pf-link-icon"
    />
    <span
      class="applauncher-pf-link-title"
    >
      Recteque
    </span>
  </a>
</li>
`;

exports[`ApplicationLauncherItem without tooltip is working properly 1`] = `
<li
  class="applauncher-pf-item"
  role="presentation"
>
  <a
    class="applauncher-pf-link"
    href="#"
    role="menuitem"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-pficon pficon-storage-domain applauncher-pf-link-icon"
    />
    <span
      class="applauncher-pf-link-title"
    >
      Recteque
    </span>
  </a>
</li>
`;

exports[`ApplicationLauncherToggle is working properly 1`] = `
<button
  aria-expanded="false"
  class="nav-item-iconic dropdown-toggle btn btn-link"
  type="button"
>
  <span
    aria-hidden="true"
    class="fa fa-th applauncher-pf-icon"
  />
  <span
    class="dropdown-title"
  >
    <span
      class="applauncher-pf-title"
    >
      Application Launcher
      <span
        aria-hidden="true"
        class="caret"
      />
    </span>
  </span>
</button>
`;

exports[`ApplicationLauncherToggle is working properly when open 1`] = `
<button
  aria-expanded="true"
  class="nav-item-iconic dropdown-toggle btn btn-link"
  type="button"
>
  <span
    aria-hidden="true"
    class="fa fa-th applauncher-pf-icon"
  />
  <span
    class="dropdown-title"
  >
    <span
      class="applauncher-pf-title"
    >
      Application Launcher
      <span
        aria-hidden="true"
        class="caret"
      />
    </span>
  </span>
</button>
`;
